[gd_scene load_steps=5 format=3 uid="uid://b3xqapw5jfje0"]

[ext_resource type="Script" path="res://src/match_simulator/match_engine/visual_match/visual_match.gd" id="1_moskm"]
[ext_resource type="PackedScene" uid="uid://blsnafnkw14i7" path="res://src/match_simulator/match_engine/visual_actors/visual_team/visual_team.tscn" id="3_cl68t"]
[ext_resource type="PackedScene" uid="uid://bkfkjsv3f5y8p" path="res://src/match_simulator/match_engine/visual_actors/visual_field/visual_field.tscn" id="4_jqh82"]
[ext_resource type="PackedScene" uid="uid://brmxp0ulenogn" path="res://src/match_simulator/match_engine/visual_actors/visual_ball/visual_ball.tscn" id="5_g1vg2"]

[node name="VisualMatch" type="Node2D"]
position = Vector2(724, 338)
script = ExtResource("1_moskm")

[node name="VisualField" parent="." instance=ExtResource("4_jqh82")]

[node name="VisualBall" parent="." instance=ExtResource("5_g1vg2")]

[node name="VisualTeamHome" parent="." instance=ExtResource("3_cl68t")]

[node name="VisualTeamAway" parent="." instance=ExtResource("3_cl68t")]
